2024-06-08  Mikael Magnusson  <mikachu@gmail.com>

	* 52946: Completion/compdump, Completion/compinit: Revert 52768

2024-05-24  Bart Schaefer  <schaefer@zsh.org>

	* users/29882: Etc/FAQ.yo: Explain $RANDOM predictability

	* 52910: Functions/Misc/zmv: Improve handling of **/ patterns

	* 52904: Completion/Unix/Command/_git: Improve quoting of paths
	passed via _call_program to "git ls-files"

2024-05-20  Mikael Magnusson  <mikachu@gmail.com>

	* 52895: Completion/Unix/Type/_baudrates: Partial revert of
	44274 which broke _baudrates

2024-05-10  Peter Stephenson  <p.stephenson@samsung.com>

	* 52924: Src/Modules/zftp.c: NULL zfsessions after free.

2024-05-08  Peter Stephenson  <p.stephenson@samsung.com>

	* 52915: Doc/Zsh/cond.yo: be explicit about behaviour of globbing
	patterns within conditions.

2024-04-07  Mikael Magnusson  <mikachu@gmail.com>

	* 52878: Src/subst.c: Fix ${foo:^bar} where bar is an associative
	array

2024-04-01  Bart Schaefer  <schaefer@zsh.org>

	* 52865: Doc/Zsh/expn.yo, Doc/Zsh/params.yo, Etc/FAQ.yo:
	Documentation update for 52864

	* 52864: Src/lex.c, Src/subst.c, Test/D10nofork.ztst,
	Test/V10private.ztst: Change ${|var|...} to ${{var} ...},
	limit local REPLY behavior to ${|...}, update tests.

	* 52781 (and typo fix): Src/hashtable.c: HIST IGNORE_DUPS treats
	whitespace as significant when HIST_REDUCE_BLANKS is also set.

2024-04-01  Oliver Kiddle  <opk@zsh.org>

	* github #115: OKURA Masafumi: Completion/Unix/Command/_ruby:
	IRB now has `--regexp-completor` and `--type-completor` options

	* 52859: Completion/Zsh/Command/_fc, Completion/Zsh/Command/_vared:
	use _date_formats for fc and complete -m/-M for vared

2024-03-25  Oliver Kiddle  <opk@zsh.org>

	* 52798: Completion/Unix/Command/_ssh,
	Completion/Unix/Type/_ssh_hosts: handle comments in ssh config

2024-03-23  Mikael Magnusson  <mikachu@gmail.com>

	* 52768: Completion/compdump, Completion/compinit: Handle
	completer filenames with funny characters in them
